traces/bug_792.txt
examples++-load/medit.cpp:1890: error: DEAD_STORE
  The value written to &ddim (type int) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1890:7: Write of unused value
1888.         boolsave= true;
1889.         saveff = GetAny<string *>( (*nargs[2])(stack) );
1890.         int ddim = 3;
              ^
1891.       
1892.         for (size_t i=0;i<offset;i++){
